--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
                 <version>2.19.1</version>
                 <dependencies>
                     <dependency>
+                        <groupId>redis.clients</groupId>
+                        <artifactId>jedis</artifactId>
+                        <version>2.8.1</version>
+                    </dependency>        
+<!--                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
                         <version>1.1.0</version>
@@ -55,12 +60,7 @@
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
                         <version>5.1.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>redis.clients</groupId>
-                        <artifactId>jedis</artifactId>
-                        <version>2.8.1</version>
-                    </dependency>     
+                    </dependency> -->
                 </dependencies>
             </plugin>
         </plugins>
