--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
                     <dependency>
                         <groupId>redis.clients</groupId>
                         <artifactId>jedis</artifactId>
-                        <version>2.8.1</version>
+                        <version>4.3.1</version>
                     </dependency>        
-<!--                     <dependency>
+                    <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
                         <version>1.1.0</version>
@@ -60,7 +60,7 @@
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
                         <version>5.1.0</version>
-                    </dependency> -->
+                    </dependency>
                 </dependencies>
             </plugin>
         </plugins>
